--- a/notebooks/master/Jets in CMS.ipynb
+++ b/notebooks/master/Jets in CMS.ipynb
@@ -4,35 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jets and boosted jets"
+    "# Jet types at the LHC"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jets are physics objects representing the hadronization and fragmentation of light-quarks and gluons. Currently, we use anti-kt jets with cone-size of 0.4 to reconstruct these types of jets. We have algoritms trying to distinguish heavy-flavour (b or c) quarks (which are in the domain of the BTV POG), quark- vs gluon-originated jets, and jets coming from pileup contributions vs jets coming from real particles. \n",
+    "Jets are reconstructed physics objects representing the hadronization and fragmentation of quarks and gluons. CMS mostly uses anti-$k_{\\mathrm{T}}$ jets with a cone-size of $R=0.4$ to reconstruct this type of jet. We have algorithms that distinguish heavy-flavour (b or c) quarks (which are in the domain of the BTV POG), quark- vs gluon-originated jets, and jets from the main $pp$ collision versus jets formed largely from pileup particles. \n",
     "\n",
+    "However, quarks and gluons are only part of the story! At the LHC, the typical collision energy is much greater than the mass scale of the known SM particles, and hence even heavier particles like top quarks, W/Z/Higgs bosons, and heavy beyond-the-Standard-Model particles can be produced with large Lorentz boosts. When these particles decay to quarks and gluons, their decay products are collimated and overlap in the detector, making them difficult to reconstruct as individual AK4 jets. \n",
     "\n",
-    "However, in the current conditions of the LHC, heavy particles such as top quarks, W/Z/Higgs bosons, or any other heavy beyond-Standard-Model proposed particle can be produced with some initial momentum. If these particles decay hadronically, their decay products can be collimated and therefore difficult to reconstruct separatedly. \n",
+    "Therefore, LHC analyses use jet algorithms with a large radius parameter to reconstruct these objects, which we called \"large radius\" or \"fat\" jets. CMS uses anti-$k_{\\mathrm{T}}$ jets with $R=0.8$ (AK8) as the standard large-radius jet, while ATLAS uses AK10. \n",
     "\n",
-    "We use wide cone-size jets to reconstruct these objects, which we called fatjets or boosted jets. In CMS, we use anti-kt jets with R=0.8 (AK8) as the standard boosted jet, while ATLAS uses AK10. This topic was explained in more detailed in the slides [ADD LINK TO SLIDES]. Additionally, an excellent overview of jet substructure techniques can be found here: [Boosted objects: a probe of beyond the Standard Model physics](http://arxiv.org/abs/1012.5412) by Abdesselam et al."
+    "This topic was explained in more detailed in the slides [ADD LINK TO SLIDES]. You can also read these excellent overviews of jet substructure techniques:\n",
+    "\n",
+    "- [Boosted objects: a probe of beyond the Standard Model physics](http://arxiv.org/abs/1012.5412) by Abdesselam et al.\n",
+    "- [Looking inside jets: an introduction to jet substructure and boosted-object phenomenology](https://arxiv.org/abs/1901.10342) by Marzani, Soyez, and Spannowsky."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Jet types and algorithms available in CMS"
+    "## Jet types and algorithms in CMS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the algorithms described in the slides are implemented in the CMS software CMSSW. However, some algoritms, with specific parameters, have become standard tools studied and recommended by the JetMET POG. These algorithms are included in the centrally produced CMS samples in AOD, miniAOD or nanoAOD format, the last two are the formats more commonly used in CMS analyses. Other algorithms, with non-standard parameters, can also be tested through the JetToolbox (discussed later in the tutorial).\n",
+    "The standard jet algorithms are all implemented in the CMS reconstruction software, [CMSSW](github.com/cms-sw/cmssw). However, a few algorithms with specific parameters (namely AK4, AK8, and CA15) have become standard tools in CMS; these jet types are extensively studied by the JetMET POG, and are highly recommended. These algorithms are included in the centrally produced CMS samples, at the AOD, miniAOD, and nanoAOD data tiers (note that miniAOD and nanoAOD are most commonly used for analysis, while AOD is much less common these days, and is not widely available on the grid). Other algorithms can be implemented and tested using the **JetToolbox** (discussed later in the tutorial).  \n",
     "\n",
-    "In this part of the tutorial you will learn how to access jet collections included in CMS datasets, the different algorithms stored in them, and how to create your own collections."
+    "In this part of the tutorial, you will learn how to access the jet collection included in the CMS datasets, do some comparisons of the different jet types, and how to create your own collections. \n"
    ]
   },
   {
@@ -252,10 +256,11 @@
     "import os\n",
     "\n",
     "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '/eos/home-X/Y/x509up_u0000'\n",
-    " \n",
-    "if os.path.isfile(os.environ['X509_USER_PROXY']): pass\n",
-    "else: print(\"os.environ['X509_USER_PROXY'] \",os.environ['X509_USER_PROXY'])\n",
+    "os.environ['X509_USER_PROXY'] = '{}/x509up_u5882'.format(os.environ[\"HOME\"])\n",
+    "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
+    "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
+    "else: \n",
+    "    print(\"Failed to find proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
     "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
     "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
    ]
@@ -418,13 +423,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### nanoAOD\n",
+    "### NanoAOD\n",
     "\n",
-    "In nanoAOD only AK4 CHS jets ( _Jet_ ) and AK8 PUPPI jets ( _FatJet_ ) are stored. Currently a set of algoritms, similar to those in miniAOD, can be found in this format. A full set of variables for each jet collection can be found in this [website](https://cms-nanoaod-integration.web.cern.ch/integration/master-102X/mc102X_doc.html).\n",
+    "In nanoAOD, only AK4 CHS jets ( _Jet_ ) and AK8 PUPPI jets ( _FatJet_ ) are stored. The jets in nanoAOD are similar to those in miniAOD, but not identical (for example, the $p_{\\mathrm{T}}$ cuts might be different). A full set of variables for each jet collection can be found in this [website](https://cms-nanoaod-integration.web.cern.ch/integration/master-102X/mc102X_doc.html).\n",
     "\n",
-    "NanoAOD is a \"flat tree\" format, meaning that you can access the information directly with simple root, or even simple python tools (like numpy or pandas). This format is becoming more and more popular within CMS due to its simplicity and accesibility. An extremely simple example can be found in `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_nanoAODtest.py` to run it in the terminal as a simple python file, or run the cell below. \n",
+    "NanoAOD is a \"flat tree\" format, meaning that you can access the information directly with simple ROOT, or even simple python tools (like numpy or pandas). This format is becoming more and more popular within CMS due to its simplicity and accesibility. An extremely simple example can be found in the next cell (or, if you're using the terminal, `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_nanoAODtest.py`). Try running this now.\n",
     "\n",
-    "However, other more advance tools exist on the market which allow you to do more sophisticated analysis using nanoAOD format, like [RDataFrames](https://root.cern/doc/master/classROOT_1_1RDataFrame.html), [NanoAOD-tools](https://github.com/cms-nanoAOD/nanoAOD-tools), or [Coffea](https://github.com/CoffeaTeam/coffea). We excourage you to look at them and use the one you like the most."
+    "*Aside*: there are several more advanced tools on the market which allow you to do more sophisticated analysis using nanoAOD format, including [RDataFrame](https://root.cern/doc/master/classROOT_1_1RDataFrame.html), [NanoAOD-tools](https://github.com/cms-nanoAOD/nanoAOD-tools), or [Coffea](https://github.com/CoffeaTeam/coffea). We excourage you to look at them and use the one you like the most."
    ]
   },
   {
@@ -463,7 +468,7 @@
     "\n",
     "Although JME generally recommends to use AK4 CHS and AK8 PUPPI jets for Run II analyses (moving fully to AK4 PUPPI jets for Run III), there are cases where certain analysis will need to use something else. Similar for the standard algorithms stored in mini/nanoAOD samples. For users who want to test a different jet collection or algorithms, JetMET had developed a user-friendly tool to compute them: [JetToolbox](https://twiki.cern.ch/twiki/bin/view/CMS/JetToolbox).\n",
     "\n",
-    "The JetToolbox is *not* part of CMSSW because JME wants to have the freedom to incorporate and test as many tools as possible without these algorithms being part on any central sample. That is the reason that, in real life, you would need to clone the [JetToolbox repository](https://github.com/cms-jet/JetToolbox) inside your CMSSW src folder as:\n",
+    "The JetToolbox is *not* part of CMSSW because JME wants to have the freedom to incorporate and test as many tools as possible without these algorithms being part of any central samples or code. That is the reason that, in real life, you would need to clone the [JetToolbox repository](https://github.com/cms-jet/JetToolbox) inside your CMSSW src folder like this:\n",
     "~~~\n",
     "cd $CMSSW_BASE/src/\n",
     "git clone git@github.com:cms-jet/JetToolbox.git JMEAnalysis/JetToolbox -b jetToolbox_102X_v3\n",
