--- a/notebooks/master/Pileup Reweighting.ipynb
+++ b/notebooks/master/Pileup Reweighting.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pileup Exercises \n",
-    "\n",
-    "\n",
-    "## Measuring pileup\n",
-    "Before we get into mitigating pileup effects, let's first examine measures of pileup in more detail. We will discuss event-by-event variables that can be used to characterize the pileup and this will give us some hints into thinking about how to deal with it.\n",
-    "\n",
-    "If you are familiar with the ROOT command line (clang) then all of the quantities we want to look at can be computed interactively. However, to move things along we have provided a set of python commands which will display the necessary information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pileup Reweighting \n",
+    "# Pileup Reweighting \n",
     "Here we are going to produce a file containing the weights used for pileup reweighting. Please note that this process can take quite a while. Be patient!\n",
     "\n",
     "In the meantime, the first question is asked here, at the beginning of this section, in order to give you a chance to think about the answers before you produce the plots. Ask yourself what pileup reweighting is doing. Try to answer the questions and do the exercise before looking at the answer."
@@ -33,10 +20,10 @@
     "<summary><font color='blue'>Show answer...</font></summary>\n",
     "The x-axis is plotted as a function of $\\mu$ as this is a true measurement of pileup (additional interactions) and not just some variable which is correlated with pileup. Other options might have been $N_{PV}$, which has an efficiency which is less than 100%, and $\\rho$, which assumes that the pileup energy density is uniform. We also get different values of $\\rho$ if we measure it for different regions in $\\eta$ (i.e. $|\\eta|<3$ or $|\\eta|<5$).\n",
     "\n",
-    "<img src=\"files/Zmumu_npv.png\" alt=\"Zmumu_npv\" width=\"380px\" style=\"float: left;\" />\n",
-    "<img src=\"files/Zmumu_rho.png\" alt=\"Zmumu_rho\" width=\"380px\" style=\"float: right;\" />\n",
-    "<img src=\"files/Zmumu_npv_nputruth.png\" alt=\"Zmumu_npv_nputruth\" width=\"380px\" style=\"float: left;\" />\n",
-    "<img src=\"files/Zmumu_rho_nputruth.png\" alt=\"Zmumu_rho_nputruth\" width=\"380px\" style=\"float: right;\" />\n",
+    "<img src=\"../files/Zmumu_npv.png\" alt=\"Zmumu_npv\" width=\"400px\" style=\"float: left;\" />\n",
+    "<img src=\"../files/Zmumu_rho.png\" alt=\"Zmumu_rho\" width=\"400px\" style=\"float: right;\" />\n",
+    "<img src=\"../files/Zmumu_npv_nputruth.png\" alt=\"Zmumu_npv_nputruth\" width=\"400px\" style=\"float: left;\" />\n",
+    "<img src=\"../files/Zmumu_rho_nputruth.png\" alt=\"Zmumu_rho_nputruth\" width=\"400px\" style=\"float: right;\" />\n",
     "</details>"
    ]
   },
@@ -48,7 +35,7 @@
    "source": [
     "%%capture\n",
     "%%bash\n",
-    "python ../python/pileupCorr.py -j ../data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l ../data/pileup_latest.txt -b 100"
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/python/pileupCorr.py -j $CMSSW_BASE/src/Analysis/JMEDAS/data/Cert_271036-284044_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt -l $CMSSW_BASE/src/Analysis/JMEDAS/data/pileup_latest.txt -b 100"
    ]
   },
   {
@@ -57,11 +44,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inf = r.TFile(\"PileupHistograms.root\",\"READ\")\n",
+    "# Loads the ROOT environment and style\n",
+    "import ROOT as r\n",
     "from Analysis.JMEDAS.pileupCorr import *\n",
+    "\n",
+    "inf = r.TFile(\"PileupHistograms.root\",\"READ\")\n",
     "c = MakeCanvas(filename=\"PileupHistograms.root\")\n",
     "c.Draw()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Question 3: Did the weights look as you expected them to?</font>\n",
+    "\n",
+    "<font color='red'>Question 4: Why do the green and red histograms end arount $\\mu\\approx38$?</font>\n",
+    "\n",
+    "<font color='red'>Question 5: What is the limiting factor on the black histogram? Why doesn't it continue to higher $\\mu$ values?</font>\n",
+    "\n",
+    "<font color='red'>Question 6: Did the method close? In other words, can we derive weights from the pileup distribution in a given MC sample, apply those weights to the same MC sample, and get back a distribution that looks just like data?</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a look at the MakeCanvas function in the pileupCorr module to see how this plot is made. This will help you to understand how to apply the pileup weights in your own analysis. You can also take a look at the other modules in the pileupCorr.py code to see how the pileup weights, and their associated systematics, are created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
