--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pileup Exercises \n",
-    "\n",
-    "\n",
-    "## Measuring pileup\n",
+    "# Measuring pileup\n",
     "Before we get into mitigating pileup effects, let's first examine measures of pileup in more detail. We will discuss event-by-event variables that can be used to characterize the pileup and this will give us some hints into thinking about how to deal with it.\n",
     "\n",
     "If you are familiar with the ROOT command line (clang) then all of the quantities we want to look at can be computed interactively. However, to move things along we have provided a set of python commands which will display the necessary information."
@@ -45,7 +42,8 @@
     "\n",
     "# Set the ROOT style\n",
     "r.gROOT.Macro(\"rootlogon.C\")\n",
-    "setTDRStyle()"
+    "setTDRStyle()\n",
+    "r.enableJSVis()"
    ]
   },
   {
