--- a/notebooks/master/Jet Substructure.ipynb
+++ b/notebooks/master/Jet Substructure.ipynb
@@ -38,7 +38,7 @@
     "import os\n",
     "\n",
     "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '{}/x509up_u0000'.format(os.environ[\"HOME\"])\n",
+    "os.environ['X509_USER_PROXY'] = '{}/x509up_u5882'.format(os.environ[\"HOME\"])\n",
     "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
     "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
     "else: \n",
@@ -78,13 +78,13 @@
     "    --maxFiles 5\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/WJetsToQQ_HT600to800.txt \\\n",
-    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/wqq_HT600to800.root \\\n",
+    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/WJetsToQQ_HT600to800.root \\\n",
     "    --maxevents=2000 \\\n",
     "    --maxjets=4 \\\n",
     "    --maxFiles 2\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt \\\n",
-    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/qcd.root \\\n",
+    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root \\\n",
     "    --maxevents=2000 \\\n",
     "    --maxjets=4 \\\n",
     "    --maxFiles 2\n"
@@ -118,12 +118,16 @@
     "h_mpuppiAK8 = f.Get(\"h_mpuppiAK8\")\n",
     "h_mSDpuppiAK8 = f.Get(\"h_mSDpuppiAK8\")\n",
     "\n",
-    "h_msoftdropAK8.SetLineColor(2)\n",
-    "h_mprunedAK8.SetLineColor(4) \n",
-    "h_msoftdropAK8.SetLineColor(2)\n",
-    "h_mprunedAK8.SetLineStyle(3) \n",
-    "h_mpuppiAK8.SetLineColor(ROOT.kGreen+3)\n",
-    "h_mSDpuppiAK8.SetLineColor(ROOT.kOrange+3)\n",
+    "h_mAK8.SetLineColor(ROOT.kBlack)\n",
+    "h_mAK8.SetLineWidth(2)\n",
+    "h_msoftdropAK8.SetLineColor(ROOT.kRed-4)\n",
+    "h_msoftdropAK8.SetLineStyle(3)\n",
+    "h_mprunedAK8.SetLineColor(ROOT.kMagenta-4) \n",
+    "h_mprunedAK8.SetLineStyle(4) \n",
+    "h_mpuppiAK8.SetLineColor(ROOT.kGreen)\n",
+    "h_mpuppiAK8.SetLineStyle(3)\n",
+    "h_mSDpuppiAK8.SetLineColor(ROOT.kAzure)\n",
+    "h_mSDpuppiAK8.SetLineStyle(2)\n",
     "\n",
     "legend = ROOT.TLegend(0.6, 0.6, 0.88, 0.88)\n",
     "legend.SetFillColor(0)\n",
@@ -135,15 +139,16 @@
     "legend.AddEntry(h_mSDpuppiAK8, \"PUPPI+SD\", 'l')\n",
     "\n",
     "c_mass = ROOT.TCanvas('c_mass', 'c_mass', 800, 600)\n",
-    "h_mprunedAK8.SetMaximum(500)\n",
-    "h_mprunedAK8.Draw()\n",
+    "#h_mprunedAK8.SetMaximum(500)\n",
+    "h_mprunedAK8.GetXaxis().SetRangeUser(0., 400.)\n",
+    "h_mprunedAK8.DrawNormalized()\n",
     "#h_mprunedAK8.GetXaxis().SetRangeUser(0, 400)\n",
     "#h_mprunedAK8.GetYaxis().SetRangeUser(0, 500)\n",
-    "h_msoftdropAK8.Draw(\"same\") \n",
-    "h_mAK8.Draw(\"same\") \n",
-    "h_mpuppiAK8.Draw(\"same\")\n",
-    "h_mSDpuppiAK8.Draw(\"same\")\n",
-    "h_mprunedAK8.Draw(\"axis same\")\n",
+    "h_msoftdropAK8.DrawNormalized(\"same\") \n",
+    "h_mAK8.DrawNormalized(\"same\") \n",
+    "h_mpuppiAK8.DrawNormalized(\"same\")\n",
+    "h_mSDpuppiAK8.DrawNormalized(\"same\")\n",
+    "h_mprunedAK8.DrawNormalized(\"axis same\")\n",
     "#h_mprunedAK8.SetMaximum(h_msoftdropAK8.GetMaximum()*1.2)\n",
     "\n",
     "legend.Draw()\n",
@@ -184,18 +189,19 @@
     "    hist_files = {\n",
     "        \"tt\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root\"), \n",
     "        \"rsg\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_ttbar_3000GeV.root\"), \n",
-    "        \"wqq\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/wqq_HT600to800.root\")\n",
+    "        \"wqq\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/WJetsToQQ_HT600to800.root\"), \n",
+    "        \"qcd\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root\")\n",
     "    }\n",
     "    hists = {}\n",
-    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\"]):\n",
-    "        print(process)\n",
+    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\", \"qcd\"]):\n",
+    "        #print(process)\n",
     "        hists[process] = hist_files[process].Get(\"h_{}\".format(variable))\n",
     "        hists[process].SetDirectory(0)\n",
     "        hists[process].SetLineColor(iprocess+1)\n",
-    "        hists[process].Rebin(5)\n",
+    "        #hists[process].Rebin(5)\n",
     "        hists[process].Scale(1. / hists[process].Integral())\n",
     "    \n",
-    "    hists[\"tt\"].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in [\"tt\", \"rsg\", \"wqq\"]]))\n",
+    "    hists[\"tt\"].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in [\"tt\", \"rsg\", \"wqq\", \"qcd\"]]))\n",
     "    # Dummy histogram for drawing axes on TCanvas\n",
     "    #hframe = ROOT.TH1F(\"hframe\", \"hframe\", hists[\"tt\"].GetNbinsX(), hists[\"tt\"].GetXaxis().GetXmin(), hists[\"tt\"].GetXaxis().GetXmax())\n",
     "    #hframe.SetDirectory(0)\n",
@@ -203,17 +209,19 @@
     "    #hframe.SetMinimum(0.)\n",
     "    #hframe.SetMaximum(1.2 * max([hists[process].GetMaximum() for process in [\"tt\", \"rsg\", \"wqq\"]]))\n",
     "    \n",
-    "    legend = ROOT.TLegend(0.15, 0.75, 0.4, 0.85)\n",
+    "    legend = ROOT.TLegend(0.15, 0.65, 0.4, 0.85)\n",
     "    legend.SetFillColor(0)\n",
+    "    legend.SetFillStyle(0)\n",
     "    legend.SetBorderSize(0)\n",
     "    legend.AddEntry(hists[\"tt\"], \"t#bar{t}\", 'l')\n",
     "    legend.AddEntry(hists[\"rsg\"], \"RS KK Gluon\", 'l')\n",
     "    legend.AddEntry(hists[\"wqq\"], \"W(qq)\", 'l')\n",
+    "    legend.AddEntry(hists[\"qcd\"], \"QCD\", 'l')\n",
     "    \n",
     "    canvas = ROOT.TCanvas(variable, variable, 700, 500) \n",
     "\n",
     "    #hframe.Draw()\n",
-    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\"]):\n",
+    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\", \"qcd\"]):\n",
     "        if iprocess == 0:\n",
     "            draw_opts = \"hist\"\n",
     "        else:\n",
