--- a/notebooks/master/Jet Substructure.ipynb
+++ b/notebooks/master/Jet Substructure.ipynb
@@ -38,7 +38,7 @@
     "import os\n",
     "\n",
     "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '{}/x509up_u5882'.format(os.environ[\"HOME\"])\n",
+    "os.environ['X509_USER_PROXY'] = '{}/x509up_u0000'.format(os.environ[\"HOME\"])\n",
     "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
     "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
     "else: \n",
@@ -67,9 +67,9 @@
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_ttbar_3000GeV.txt \\\n",
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_ttbar_3000GeV.root \\\n",
     "    --maxevents=2000 \\\n",
-    "    --maxFiles 10 \\\n",
-    "    --maxjets=2 \\\n",
-    "    --correctJets Fall17_17Nov2017_V32_MC\n",
+    "    --maxFiles 1 \\\n",
+    "    --maxjets=6\n",
+    "    #--correctJets Fall17_17Nov2017_V32_MC\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt \\\n",
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root \\\n",
@@ -81,7 +81,8 @@
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/WJetsToQQ_HT600to800.root \\\n",
     "    --maxevents=2000 \\\n",
     "    --maxjets=4 \\\n",
-    "    --maxFiles 2\n",
+    "    --maxFiles 2 \\\n",
+    "    --matchPdgIdAK8 24 0.8    \n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt \\\n",
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root \\\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compareHistogram(variable):\n",
+    "def compareHistogram(variable, processes=[\"tt\", \"rsg\", \"wqq\", \"qcd\"]):\n",
     "    hist_files = {\n",
     "        \"tt\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root\"), \n",
     "        \"rsg\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_ttbar_3000GeV.root\"), \n",
@@ -193,15 +194,15 @@
     "        \"qcd\": ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root\")\n",
     "    }\n",
     "    hists = {}\n",
-    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\", \"qcd\"]):\n",
+    "    for iprocess, process in enumerate(processes):\n",
     "        #print(process)\n",
     "        hists[process] = hist_files[process].Get(\"h_{}\".format(variable))\n",
     "        hists[process].SetDirectory(0)\n",
     "        hists[process].SetLineColor(iprocess+1)\n",
-    "        #hists[process].Rebin(5)\n",
+    "        hists[process].Rebin(2)\n",
     "        hists[process].Scale(1. / hists[process].Integral())\n",
     "    \n",
-    "    hists[\"tt\"].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in [\"tt\", \"rsg\", \"wqq\", \"qcd\"]]))\n",
+    "    hists[processes[0]].SetMaximum(1.2 * max([hists[process].GetMaximum() for process in processes]))\n",
     "    # Dummy histogram for drawing axes on TCanvas\n",
     "    #hframe = ROOT.TH1F(\"hframe\", \"hframe\", hists[\"tt\"].GetNbinsX(), hists[\"tt\"].GetXaxis().GetXmin(), hists[\"tt\"].GetXaxis().GetXmax())\n",
     "    #hframe.SetDirectory(0)\n",
@@ -213,15 +214,21 @@
     "    legend.SetFillColor(0)\n",
     "    legend.SetFillStyle(0)\n",
     "    legend.SetBorderSize(0)\n",
-    "    legend.AddEntry(hists[\"tt\"], \"t#bar{t}\", 'l')\n",
-    "    legend.AddEntry(hists[\"rsg\"], \"RS KK Gluon\", 'l')\n",
-    "    legend.AddEntry(hists[\"wqq\"], \"W(qq)\", 'l')\n",
-    "    legend.AddEntry(hists[\"qcd\"], \"QCD\", 'l')\n",
+    "    \n",
+    "    legend_entries = {\n",
+    "        \"tt\": \"t#bar{t}\", \n",
+    "        \"rsg\": \"RS KK gluon\",\n",
+    "        \"wqq\": \"W(qq)\", \n",
+    "        \"qcd\": \"QCD\"\n",
+    "    }\n",
+    "    \n",
+    "    for process in processes:\n",
+    "        legend.AddEntry(hists[process], legend_entries[process], \"l\")\n",
     "    \n",
     "    canvas = ROOT.TCanvas(variable, variable, 700, 500) \n",
     "\n",
     "    #hframe.Draw()\n",
-    "    for iprocess, process in enumerate([\"tt\", \"rsg\", \"wqq\", \"qcd\"]):\n",
+    "    for iprocess, process in enumerate(processes):\n",
     "        if iprocess == 0:\n",
     "            draw_opts = \"hist\"\n",
     "        else:\n",
@@ -250,7 +257,7 @@
    },
    "outputs": [],
    "source": [
-    "compareHistogram('tau21AK8')"
+    "compareHistogram('tau21AK8', processes=[\"rsg\", \"wqq\", \"qcd\"])"
    ]
   },
   {
@@ -268,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram('tau32AK8')"
+    "compareHistogram('tau32AK8', processes=[\"rsg\", \"wqq\", \"qcd\"])"
    ]
   },
   {
@@ -286,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram( 'ak8_N2_beta1' )"
+    "compareHistogram( 'ak8_N2_beta1', processes=[\"rsg\", \"wqq\", \"qcd\"] )"
    ]
   },
   {
@@ -295,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compareHistogram( 'ak8_N3_beta1' )"
+    "compareHistogram( 'ak8_N3_beta1', processes=[\"rsg\", \"wqq\", \"qcd\"] )"
    ]
   },
   {
